<resources>
    <string name="app_name">TNAdmin</string>

    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="logoimage">logoimage</string>
    <string name="room_type">Room Type</string>
    <string name="pnr">PNR</string>
    <string name="extra_bed">Extra Bed</string>
    <string name="check_in">Check-In</string>
    <string name="sup_amount">Sup. Amount</string>
    <string name="ref_id">Ref ID</string>
    <string name="nights">Nights</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="neft">NEFT</string>
    <string name="imps">IMPS</string>
    <string name="transaction_date_amp_time"><![CDATA[Transaction Date & Time]]></string>
    <string name="status">Status</string>
    <string name="remarks">Remarks</string>
    <string name="actions">Actions</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="manage">Manage</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="total_rooms">Total Rooms</string>
    <string name="available_rooms">Available Rooms</string>
    <string name="room_price">Room Price</string>
    <string name="block_inventory">Block Inventory</string>
    <string name="phone_number">MOBILE NUMBER</string>
    <string name="tripnetra">TripNetra</string>
    <string name="address_string">202,2nd Floor \nEcco Greens Park Upadhyaya Nagar Akkarampalli \nTirupati - 517501</string>
    <string name="cancelled">Cancelled</string>
    <string name="upcoming">Upcoming</string>
    <string name="all">All</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="helpline_no">Helpline No   :</string>
    <string name="_0877_2500800_9393939510">0877 2500800, 9393939510</string>
    <string name="booking_date_amp_time"><![CDATA[Booking Date & Time:]]></string>
    <string name="booking_number">Booking number  :</string>
    <string name="booking_status">Booking status  :</string>
    <string name="hotel_details">Hotel Details</string>
    <string name="booking_details">Booking Details</string>
    <string name="name">Name</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="standard_check_in_time">Standard Check-in Time</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="no_of_rooms">No. of Rooms</string>
    <string name="no_of_guests">No. of Guests</string>
    <string name="no_of_nights">No. of Nights</string>
    <string name="no_of_extra_beds">No. of Extra Beds</string>
    <string name="payment_breakup">Payment Breakup</string>
    <string name="price_includes_gst_if">Price Includes GST if Applicable</string>
    <string name="price_includes_gst">Price Includes GST</string>
    <string name="total_room_charges">Total Room Charges  :</string>
    <string name="tripnetra_gst_18">Tripnetra GST @ 18%(-)  :</string>
    <string name="igst_cgst_amp_sgst"><![CDATA[(IGST/CGST&SGST)]]></string>
    <string name="hotel_gst">Hotel GST(+)</string>
    <string name="tripnetra_payable_to_hotel">Tripnetra Payable to Hotel  :</string>
    <string name="total_price">Total Price</string>
    <string name="resend_to_customer">Resend To\nCustomer</string>
    <string name="resend_to_supplier">Resend To\nSupplier</string>
    <string name="cancel_booking">Cancel\nBooking</string>
    <string name="reject_booking">Reject\nBooking</string>
    <string name="total_amount">Total Amount  :</string>
    <string name="tripnetra_commision">TripNetra Commission(-)  :</string>
    <string name="complimentay_rooms_charge">Complimentay Rooms Charge(-)   :</string>
    <string name="hot_inventory">Hotel Inventory</string>
    <string name="bookings">Bookings</string>
    <string name="payment_reports">Payment Reports</string>
    <string name="hotel_booking_reports">Hotel Booking Reports</string>
    <string name="car_booking_reports">Car Booking Reports</string>
    <string name="tour_booking_reports">Tour Booking Reports</string>
    <string name="car_name">Car Name</string>
    <string name="car_type">Car Type</string>
    <string name="car_company">Car Company</string>
    <string name="phone_no">Phone No</string>
    <string name="city">City</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="car_details">Car Details</string>
    <string name="drop_place">Drop Place</string>
    <string name="tour_details">Tour Details</string>
    <string name="tour_name">Tour Name</string>
    <string name="Dharshan_date">Dharshan Date</string>
    <string name="partial_price">Partial Price</string>
    <string name="balance_price">Balance Price</string>
    <string name="from_place">From Place</string>
    <string name="user_id">User id</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="data_log">Data Log</string>
    <string name="search">Search</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="price">Price</string>
    <string name="availability">Availability</string>
    <string name="contact_no">Contact No :</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="supported_by">Supported By</string>
    <string name="darshan_booking_reports">Darshan Booking Reports</string>
    <string name="persons">Persons</string>
    <string name="error_occur">Error Occurred</string>
    <string name="car_inventory">Darshan Inventory</string>
    <string name="actual_adult_price">Actual/Adult Price</string>
    <string name="partial_child_price">Partial/Child Price</string>
    <string name="status_arrow"><![CDATA[Status ->]]></string>
    <string name="expected_checkin_time">Expected Checkin time</string>
    <string name="hotels">Hotels</string>
    <string name="darshans">Darshans</string>
    <string name="capacity">Capacity</string>
    <string name="no_records_found">No Records Found</string>
    <string name="logout">Logout</string>
    <string name="cancellations">Cancellations</string>
    <string name="tours">Tours</string>
    <string name="cars">Cars</string>
    <string name="package_name">Package Name</string>
    <string name="note_values">Note : Values are Based on From Date</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="link">Package Link</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_hotel">Select City</string>
    <string name="packages">Packages</string>
    <string name="darshan_date">Checkout</string>
    <string name="note">note</string>
</resources>
