<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#2B5B83">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/HotelTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hotels"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:background="@drawable/border_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/darshanTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/darshans"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#fff"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/logo1"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logoimage"/>

    <AutoCompleteTextView
        android:id="@+id/hotelAtv"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/whiteborder2"
        android:drawableEnd="@drawable/loc_blue"
        android:gravity="center"
        android:hint="@string/hotel_name"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:drawableRight="@drawable/loc_blue"
        android:paddingLeft="20dp"
        android:paddingRight="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cinBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/whiteborder2"
            android:drawableEnd="@drawable/cal24"
            android:hint="@string/check_in_date"
            android:textColor="#000"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:drawableRight="@drawable/cal24"
            android:paddingLeft="20dp"
            android:paddingRight="5dp" />

        <Button
            android:id="@+id/coutBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/whiteborder2"
            android:drawableEnd="@drawable/cal24"
            android:hint="@string/check_out_date"
            android:textColor="#000"
            android:paddingStart="20dp"
            android:paddingEnd="5dp"
            android:layout_marginLeft="15dp"
            android:drawableRight="@drawable/cal24"
            android:paddingRight="5dp"
            android:paddingLeft="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>