<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainlayt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:weightSum="3"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allTv"
            android:layout_width="0dp"
            android:text="@string/all"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/UpcomeTv"
            android:layout_width="0dp"
            android:text="@string/upcoming"
            android:background="@drawable/line_bottom_blue"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/cancelTv"
            android:layout_width="0dp"
            android:text="@string/cancelled"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dcdcdc"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity_log_view"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:backgroundTint="#000"
            android:scaleType="fitCenter"
            android:src="@drawable/cal"
            android:layout_gravity="bottom|end"/>

    </FrameLayout>

</LinearLayout>
