<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo1"
        android:background="#f5f5f5"
        android:contentDescription="@string/logoimage"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#eee"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:contentPadding="2dp"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/helpline_no"
                        android:layout_marginStart="4dp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginLeft="4dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/_0877_2500800_9393939510"
                        android:textSize="13sp"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_date_amp_time"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/BookDatetv"
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="end"
                        android:textSize="15sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_number"
                        android:textStyle="bold"
                        android:layout_marginStart="4dp"
                        android:textSize="16sp"
                        android:layout_marginLeft="4dp" />

                    <TextView
                        android:id="@+id/PnrTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textStyle="bold"
                        android:textIsSelectable="true"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="15sp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="4dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_status"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/PnrStatTv"
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>